# status_prediction

./: README.md  pyproject.toml
data/: data.csv  repositories.csv  traindata.csv
prediction/: data_collection.py  data_processing.py  random_forest.py
