[tool.poetry]
name = "prediction"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
PyDriller = "^1.15.4"
PyGithub = "^1.54"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
